Safari365 Prod/src/objects/CRM__c.object
<CustomObject>
    <fields>
        <fullName>ADDRESS1__c</fullName>
        <label>ADDRESS1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDRESS2__c</fullName>
        <label>ADDRESS2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDRESS3__c</fullName>
        <label>ADDRESS3</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANALYSIS_MASTER1__c</fullName>
        <label>ANALYSIS MASTER1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANALYSIS_MASTER2__c</fullName>
        <label>ANALYSIS MASTER2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANALYSIS_MASTER3__c</fullName>
        <label>ANALYSIS MASTER3</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CODE__c</fullName>
        <externalId>true</externalId>
        <label>CODE</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COMMISSION__c</fullName>
        <label>COMMISSION</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CREATED_BY__c</fullName>
        <label>CREATED BY</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CREATED__c</fullName>
        <label>CREATED</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_ID__c</fullName>
        <label>CRM ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DEFAULT_CURRENCY__c</fullName>
        <label>DEFAULT CURRENCY</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DELETED__c</fullName>
        <label>DELETED</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDITED_BY__c</fullName>
        <label>EDITED BY</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDITED_DATE__c</fullName>
        <label>EDITED DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IMPORT_FILE_LOCATION__c</fullName>
        <label>IMPORT FILE LOCATION</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMPORT_FORMAT__c</fullName>
        <label>IMPORT FORMAT</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INT_ACCESS__c</fullName>
        <label>INT ACCESS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INT_LOGIN__c</fullName>
        <label>INT LOGIN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INT_PASSWORD__c</fullName>
        <label>INT PASSWORD</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LANGUAGE__c</fullName>
        <label>LANGUAGE</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAILING_ADDRESS1__c</fullName>
        <label>MAILING ADDRESS1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAILING_ADDRESS2__c</fullName>
        <label>MAILING ADDRESS2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAILING_ADDRESS3__c</fullName>
        <label>MAILING ADDRESS3</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAILING_NAME__c</fullName>
        <label>MAILING NAME</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAILING_PCODE__c</fullName>
        <label>MAILING PCODE</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MARKUP__c</fullName>
        <label>MARKUP</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NAME__c</fullName>
        <label>NAME</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCODE__c</fullName>
        <label>PCODE</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREFER__c</fullName>
        <label>PREFER</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOD_ID__c</fullName>
        <label>SOD ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUPPLIERCHAIN__c</fullName>
        <label>SUPPLIERCHAIN</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPPLIERMASTER__c</fullName>
        <label>SUPPLIERMASTER</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAXINDICATOR__c</fullName>
        <label>TAXINDICATOR</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UDTEXT1__c</fullName>
        <label>UDTEXT1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UDTEXT2__c</fullName>
        <label>UDTEXT2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UDTEXT3__c</fullName>
        <label>UDTEXT3</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOUCHER_UPDATE__c</fullName>
        <label>VOUCHER UPDATE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CRM</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME__c</columns>
        <columns>NAME</columns>
        <columns>ADDRESS5__c</columns>
        <columns>ADDRESS4__c</columns>
        <columns>ADDRESS3__c</columns>
        <columns>ADDRESS2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CRM-{00000000}</displayFormat>
        <label>CRM Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>